Fix alignment of /f/ tag selector with Files button.
This CSS will also work for the /pol/ flag selector if that ever
comes back.

@Nebukazar
Yet another thing to override in OneeChan.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -1275,7 +1275,8 @@ input.field.tripped:not(:hover):not(:focus) {
   align-items: stretch;
   margin-top: 1px;
 }
-:root.gecko #file-n-submit > input {
+:root.gecko #file-n-submit > input,
+:root.gecko #qr > form > select {
   margin: 0px -1px -1px;
 }
 #file-n-submit input[type="submit"] {
